# substrate-mvce

./: README.md
backend/: .gitignore  Cargo.toml  README.md  build.rs
backend/node/: Cargo.toml
backend/node/src/: chain_spec.rs  service.rs
backend/pallets/poe/: Cargo.toml
backend/pallets/poe/src/: README.md  lib.rs  mock.rs  tests.rs
backend/runtime/: Cargo.toml
backend/runtime/src/: lib.rs
backend/scripts/: start.bat
js-cli/: owlnet.json  package.json  tsconfig.json
js-cli/src/: main.ts  poe.ts  setupConnection.ts
js-cli/src/interfaces/: augment-api-query.ts  augment-api-tx.ts  augment-types.ts
js-cli/src/interfaces/poe/: definitions.ts  types.ts
js-cli/src/rules/: photo.ts
